# openfinance-agent

./: .coverage  .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: default.mdc
.github/workflows/: test.yml
openfinance_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  main.py
src/agent/llm/: base.py  openai.py  prompts.py
src/cognitive/: decision.py  learning.py  memory.py  planner.py
src/compiler/: ast_transformer.py  pipeline.py
tests/unit/: conftest.py  test_main.py
tests/unit/agent/llm/: test_base.py  test_openai.py  test_prompts.py
tests/unit/cognitive/: test_decision.py  test_learning.py  test_memory.py  test_planner.py
tests/unit/compiler/: test_ast_transformer.py  test_pipeline.py
